--- a/public/formulario-eventos.html
+++ b/public/formulario-eventos.html
@@ -3,29 +3,51 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Formulario para Otros Proyectos / Eventos – Chamufem</title>
-		<!-- ✅ Ruta ajustada al archivo CSS -->
-		<link rel="stylesheet" href="../css/styles.css" />
+		<title>Chamufem</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="/css/styles.css" />
 	</head>
 	<body>
-		<nav>
-			<ul>
-				<li><a href="home.html">Inicio</a></li>
-				<li><a href="sobre_mi.html">Sobre mi</a></li>
-				<li>
-					<a href="desde_cero.html">Desde Cero Voces Ciudadanas</a>
-				</li>
-				<li><a href="historias.html">Historias que importan</a></li>
-				<li>
-					<a href="artistas_difundidos.html"
-						>Artistas difundidos por Chamufem</a
-					>
-				</li>
-				<li><a href="form_prensa.html">Formulario de Prensa</a></li>
-				<li><a href="podcast.html">Podcast</a></li>
-			</ul>
-		</nav>
-		<br />
+		<header>
+			<nav>
+				<div class="logo-contenedor">
+					<img src="imagen/chamufem.png" alt="logo" />
+					<h1>Periodismo Visceral</h1>
+				</div>
+				<ul class="nav-menu">
+					<li><a href="home.html">Inicio</a></li>
+					<li><a href="sobre_mi.html">Sobre mí</a></li>
+					<li>
+						<a href="desde_cero.html"
+							>Desde Cero Voces Ciudadanas</a
+						>
+					</li>
+					<li><a href="historias.html">Historias que importan</a></li>
+					<li>
+						<a href="artistas_difundidos.html"
+							>Artistas difundidos</a
+						>
+					</li>
+					<li><a href="form_prensa.html">Formulario de Prensa</a></li>
+					<li><a href="podcast.html">Podcast</a></li>
+				</ul>
+			</nav>
+		</header>
 
 		<h1>Formulario para Otros Proyectos / Eventos</h1>
 		<form action="/procesar_evento" method="post">
