Footer actualizado, aplicado a todas las paginas

--- a/public/form_prensa.html
+++ b/public/form_prensa.html
@@ -20,6 +20,10 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="/css/styles.css" />
 	</head>
 
@@ -49,39 +53,58 @@
 				</ul>
 			</nav>
 		</header>
-		<div>
-			<main>
-				<!DOCTYPE html>
-				<html lang="es">
-					<head>
-						<meta charset="UTF-8" />
-						<meta
-							name="viewport"
-							content="width=device-width, initial-scale=1.0"
-						/>
-						<title>
-							Sistema de Formulario de Difusión – Chamufem
-						</title>
-					</head>
-					<body>
-						<h1>Chamufem</h1>
-						<h2>Difusion y Prensa</h2>
+		<main>
+			<h1>Chamufem</h1>
+			<h2>Difusion y Prensa</h2>
 
-						<h2>¿Qué querés difundir?</h2>
+			<h2>¿Qué querés difundir?</h2>
 
-						<p>
-							<a href="formulario-artistas.html"
-								>Banda o Artista</a
-							>
-						</p>
-						<p>
-							<a href="formulario-eventos.html"
-								>Otro tipo de proyecto, evento o información</a
-							>
-						</p>
-					</body>
-				</html>
-			</main>
-		</div>
+			<p>
+				<a href="formulario-artistas.html">Banda o Artista</a>
+			</p>
+			<p>
+				<a href="formulario-eventos.html"
+					>Otro tipo de proyecto, evento o información</a
+				>
+			</p>
+		</main>
+		<footer>
+			<div class="copyright">
+				<p>&copy; 2025 Chamufem. Todos los derechos reservados.</p>
+			</div>
+			<div class="developer">
+				<p>Desarrollado por Lucas Godina y Yamila Morais</p>
+			</div>
+			<div class="redes-sociales">
+				<a
+					href="https://www.facebook.com"
+					target="_blank"
+					aria-label="Facebook"
+				>
+					<i class="fab fa-facebook-f"></i>
+				</a>
+				<a
+					href="https://www.twitter.com"
+					target="_blank"
+					aria-label="Twitter"
+				>
+					<i class="fab fa-twitter"></i>
+				</a>
+				<a
+					href="https://www.instagram.com"
+					target="_blank"
+					aria-label="Instagram"
+				>
+					<i class="fab fa-instagram"></i>
+				</a>
+				<a
+					href="https://www.linkedin.com"
+					target="_blank"
+					aria-label="LinkedIn"
+				>
+					<i class="fab fa-linkedin-in"></i>
+				</a>
+			</div>
+		</footer>
 	</body>
 </html>
