--- a/public/sobre_mi.html
+++ b/public/sobre_mi.html
@@ -20,18 +20,22 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="/css/styles.css" />
 	</head>
 	<body>
 		<header>
-			<div class="logo-contenedor">
-				<img src="imagen/chamufem.png" alt="logo" />
-				<h1>Periodismo Visceral</h1>
-			</div>
 			<nav>
-				<ul>
+				<div class="logo-contenedor">
+					<img src="imagen/chamufem.png" alt="logo" />
+					<h1>Periodismo Visceral</h1>
+				</div>
+				<ul class="nav-menu">
 					<li><a href="home.html">Inicio</a></li>
-					<li><a href="sobre_mi.html">Sobre mi</a></li>
+					<li><a href="sobre_mi.html">Sobre mí</a></li>
 					<li>
 						<a href="desde_cero.html"
 							>Desde Cero Voces Ciudadanas</a
@@ -40,7 +44,7 @@
 					<li><a href="historias.html">Historias que importan</a></li>
 					<li>
 						<a href="artistas_difundidos.html"
-							>Artistas difundidos por Chamufem</a
+							>Artistas difundidos</a
 						>
 					</li>
 					<li><a href="form_prensa.html">Formulario de Prensa</a></li>
@@ -48,5 +52,53 @@
 				</ul>
 			</nav>
 		</header>
+		<main>
+			<h1>Sobre mí</h1>
+			<div>
+				<p style="text-align: center">
+					Soy periodista y comunicadora social. Me apasiona contar
+					historias y dar voz a quienes no la tienen. En este espacio,
+					comparto mis proyectos y colaboraciones.
+				</p>
+			</div>
+		</main>
+		<footer>
+			<div class="copyright">
+				<p>&copy; 2025 Chamufem. Todos los derechos reservados.</p>
+			</div>
+			<div class="developer">
+				<p>Desarrollado por Lucas Godina y Yamila Morais</p>
+			</div>
+			<div class="redes-sociales">
+				<a
+					href="https://www.facebook.com"
+					target="_blank"
+					aria-label="Facebook"
+				>
+					<i class="fab fa-facebook-f"></i>
+				</a>
+				<a
+					href="https://www.twitter.com"
+					target="_blank"
+					aria-label="Twitter"
+				>
+					<i class="fab fa-twitter"></i>
+				</a>
+				<a
+					href="https://www.instagram.com"
+					target="_blank"
+					aria-label="Instagram"
+				>
+					<i class="fab fa-instagram"></i>
+				</a>
+				<a
+					href="https://www.linkedin.com"
+					target="_blank"
+					aria-label="LinkedIn"
+				>
+					<i class="fab fa-linkedin-in"></i>
+				</a>
+			</div>
+		</footer>
 	</body>
 </html>
