--- a/public/artistas_difundidos.html
+++ b/public/artistas_difundidos.html
@@ -20,6 +20,10 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="/css/styles.css" />
 	</head>
 	<body>
@@ -48,60 +52,100 @@
 				</ul>
 			</nav>
 		</header>
+		<main>
+			<h1>Artistas Difundidos por Chamufem</h1>
 
-		<h1>Artistas Difundidos por Chamufem</h1>
-
-		<div>
-			<p style="text-align: center">
-				Aquí podrás encontrar información sobre los artistas que confían
-				en nosotros para difundir su trayectoria musical y novedades:
-			</p>
-		</div>
-		<div id="lista_artistas">
-			<ul>
-				<li>
-					<img
-						src="../public/imagen/foto1_ceci.jpg"
-						alt="Cecilia Noel"
-					/>
-					<br />
-					<a
-						href="artistas_difundidos/cecilia_noel.pdf"
-						target="_blank"
-						>Conoce más sobre Cecilia Noel</a
-					>
-				</li>
-				<li>
-					<img
-						src="../public/imagen/foto1_karlin.jpg"
-						alt="Karlin Castillo"
-					/><br /><a
-						href="artistas_difundidos/karlin_castillo.pdf"
-						target="_blank"
-						>Conoce más sobre Karlin Castillo</a
-					>
-				</li>
-				<li>
-					<img
-						src="../public/imagen/foto1_lucas_del_zar.jpg"
-						alt="Lucas Del Zar"
-					/><br /><a
-						href="artistas_difundidos/lucas_del_zar.pdf"
-						target="_blank"
-						>Conoce más sobre Lucas Del Zar</a
-					>
-				</li>
-				<li>
-					<img src="../public/imagen/foto1_max.jpg" alt="" /><br /><a
-						href="artistas_difundidos/max_montanari.pdf"
-						target="_blank"
-						>Conoce más sobre Max Montanari</a
-					>
-				</li>
-			</ul>
-		</div>
+			<div>
+				<p style="text-align: center">
+					Aquí podrás encontrar información sobre los artistas que
+					confían en nosotros para difundir su trayectoria musical y
+					novedades:
+				</p>
+			</div>
+			<div id="lista_artistas">
+				<ul>
+					<li>
+						<img
+							src="../public/imagen/foto1_ceci.jpg"
+							alt="Cecilia Noel"
+						/>
+						<br />
+						<a
+							href="artistas_difundidos/cecilia_noel.pdf"
+							target="_blank"
+							>Conoce más sobre Cecilia Noel</a
+						>
+					</li>
+					<li>
+						<img
+							src="../public/imagen/foto1_karlin.jpg"
+							alt="Karlin Castillo"
+						/><br /><a
+							href="artistas_difundidos/karlin_castillo.pdf"
+							target="_blank"
+							>Conoce más sobre Karlin Castillo</a
+						>
+					</li>
+					<li>
+						<img
+							src="../public/imagen/foto1_lucas_del_zar.jpg"
+							alt="Lucas Del Zar"
+						/><br /><a
+							href="artistas_difundidos/lucas_del_zar.pdf"
+							target="_blank"
+							>Conoce más sobre Lucas Del Zar</a
+						>
+					</li>
+					<li>
+						<img
+							src="../public/imagen/foto1_max.jpg"
+							alt=""
+						/><br /><a
+							href="artistas_difundidos/max_montanari.pdf"
+							target="_blank"
+							>Conoce más sobre Max Montanari</a
+						>
+					</li>
+				</ul>
+			</div>
+		</main>
 		<footer>
-			<p><a href="home.html">Volver a la página principal</a></p>
+			<div class="copyright">
+				<p>&copy; 2025 Chamufem. Todos los derechos reservados.</p>
+			</div>
+			<div class="developer">
+				<p>Desarrollado por Lucas Godina y Yamila Morais</p>
+			</div>
+			<div class="redes-sociales">
+				<a
+					href="https://www.facebook.com"
+					target="_blank"
+					aria-label="Facebook"
+				>
+					<i class="fab fa-facebook-f"></i>
+				</a>
+				<a
+					href="https://www.twitter.com"
+					target="_blank"
+					aria-label="Twitter"
+				>
+					<i class="fab fa-twitter"></i>
+				</a>
+				<a
+					href="https://www.instagram.com"
+					target="_blank"
+					aria-label="Instagram"
+				>
+					<i class="fab fa-instagram"></i>
+				</a>
+				<a
+					href="https://www.linkedin.com"
+					target="_blank"
+					aria-label="LinkedIn"
+				>
+					<i class="fab fa-linkedin-in"></i>
+				</a>
+			</div>
 		</footer>
 	</body>
 </html>
