--- a/public/desde_cero.html
+++ b/public/desde_cero.html
@@ -20,6 +20,10 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="/css/styles.css" />
 	</head>
 	<body>
@@ -48,5 +52,54 @@
 				</ul>
 			</nav>
 		</header>
+		<main>
+			<h1>Desde Cero Voces Ciudadanas</h1>
+			<div>
+				<p style="text-align: center">
+					Este proyecto busca dar voz a quienes no la tienen, a través
+					de historias y testimonios de vida. Aquí podrás encontrar
+					una colección de relatos que reflejan la realidad de muchas
+					personas.
+				</p>
+			</div>
+		</main>
+		<footer>
+			<div class="copyright">
+				<p>&copy; 2025 Chamufem. Todos los derechos reservados.</p>
+			</div>
+			<div class="developer">
+				<p>Desarrollado por Lucas Godina y Yamila Morais</p>
+			</div>
+			<div class="redes-sociales">
+				<a
+					href="https://www.facebook.com"
+					target="_blank"
+					aria-label="Facebook"
+				>
+					<i class="fab fa-facebook-f"></i>
+				</a>
+				<a
+					href="https://www.twitter.com"
+					target="_blank"
+					aria-label="Twitter"
+				>
+					<i class="fab fa-twitter"></i>
+				</a>
+				<a
+					href="https://www.instagram.com"
+					target="_blank"
+					aria-label="Instagram"
+				>
+					<i class="fab fa-instagram"></i>
+				</a>
+				<a
+					href="https://www.linkedin.com"
+					target="_blank"
+					aria-label="LinkedIn"
+				>
+					<i class="fab fa-linkedin-in"></i>
+				</a>
+			</div>
+		</footer>
 	</body>
 </html>
