--- a/public/home.html
+++ b/public/home.html
@@ -20,6 +20,10 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="/css/styles.css" />
 	</head>
 	<body>
@@ -66,6 +70,43 @@
 			</section>
 		</main>
 
-		<footer>&copy; 2025 Chamufem - Todos los derechos reservados</footer>
+		<footer>
+			<div class="copyright">
+				<p>&copy; 2025 Chamufem. Todos los derechos reservados.</p>
+			</div>
+			<div class="developer">
+				<p>Desarrollado por Lucas Godina y Yamila Morais</p>
+			</div>
+			<div class="redes-sociales">
+				<a
+					href="https://www.facebook.com"
+					target="_blank"
+					aria-label="Facebook"
+				>
+					<i class="fab fa-facebook-f"></i>
+				</a>
+				<a
+					href="https://www.twitter.com"
+					target="_blank"
+					aria-label="Twitter"
+				>
+					<i class="fab fa-twitter"></i>
+				</a>
+				<a
+					href="https://www.instagram.com"
+					target="_blank"
+					aria-label="Instagram"
+				>
+					<i class="fab fa-instagram"></i>
+				</a>
+				<a
+					href="https://www.linkedin.com"
+					target="_blank"
+					aria-label="LinkedIn"
+				>
+					<i class="fab fa-linkedin-in"></i>
+				</a>
+			</div>
+		</footer>
 	</body>
 </html>
