--- a/public/podcast.html
+++ b/public/podcast.html
@@ -20,10 +20,14 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="/css/styles.css" />
 	</head>
-<body>
-    <header>
+	<body>
+    	<header>
 			<nav>
 				<div class="logo-contenedor">
 					<img src="imagen/chamufem.png" alt="logo" />
@@ -49,7 +53,7 @@
 			</nav>
 		</header>
 
-      <section id="podcast">
+      <main>
         <h2>🎧 Escuchá Chamufem en Spotify</h2>
         <iframe style="border-radius:12px"
           src="<iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/136VvaKXbZPrRfuQSQ9na3?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>"
@@ -57,7 +61,44 @@
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
           loading="lazy">
         </iframe>
-      </section>
-
-</body>
+      </main>
+	  <footer>
+			<div class="copyright">
+				<p>&copy; 2025 Chamufem. Todos los derechos reservados.</p>
+			</div>
+			<div class="developer">
+				<p>Desarrollado por Lucas Godina y Yamila Morais</p>
+			</div>
+			<div class="redes-sociales">
+				<a
+					href="https://www.facebook.com"
+					target="_blank"
+					aria-label="Facebook"
+				>
+					<i class="fab fa-facebook-f"></i>
+				</a>
+				<a
+					href="https://www.twitter.com"
+					target="_blank"
+					aria-label="Twitter"
+				>
+					<i class="fab fa-twitter"></i>
+				</a>
+				<a
+					href="https://www.instagram.com"
+					target="_blank"
+					aria-label="Instagram"
+				>
+					<i class="fab fa-instagram"></i>
+				</a>
+				<a
+					href="https://www.linkedin.com"
+					target="_blank"
+					aria-label="LinkedIn"
+				>
+					<i class="fab fa-linkedin-in"></i>
+				</a>
+			</div>
+		</footer>
+	</body>
 </html>
