Nuevas imagenes y video. Actualizado sobre_mi.html

--- a/public/sobre_mi.html
+++ b/public/sobre_mi.html
@@ -53,13 +53,31 @@
 			</nav>
 		</header>
 		<main>
-			<h1>Sobre mí</h1>
-			<div>
-				<p style="text-align: center">
-					Soy periodista y comunicadora social. Me apasiona contar
-					historias y dar voz a quienes no la tienen. En este espacio,
-					comparto mis proyectos y colaboraciones.
-				</p>
+			<div class="perfil-container">
+				<div class="fotos-perfil">
+					<img
+						src="imagen/foto_perfil_1.jpg"
+						alt="Foto de Yamila Morais"
+						class="foto-personal"
+					/>
+					<img
+						src="imagen/foto_perfil_2.png"
+						alt="Foto de Yamila Morias"
+						class="foto-personal"
+					/>
+				</div>
+				<div class="descripcion-perfil">
+					<h1>Yamila Morais</h1>
+					<p>
+						Soy periodista y comunicadora social. Recibida de la
+						carrera X. Mi trabajo se centra en el periodismo
+						visceral, donde busco conectar con la esencia de cada
+						historia y transmitirla de manera auténtica y
+						significativa. A través de Chamufem, he creado un
+						espacio donde las voces de la comunidad encuentran un
+						lugar para resonar y ser escuchadas.
+					</p>
+				</div>
 			</div>
 		</main>
 		<footer>
