Nueva sección "Desde cero"

--- a/public/desde_cero.html
+++ b/public/desde_cero.html
@@ -53,14 +53,115 @@
 			</nav>
 		</header>
 		<main>
-			<h1>Desde Cero Voces Ciudadanas</h1>
-			<div>
-				<p style="text-align: center">
-					Este proyecto busca dar voz a quienes no la tienen, a través
-					de historias y testimonios de vida. Aquí podrás encontrar
-					una colección de relatos que reflejan la realidad de muchas
-					personas.
+			<div class="radio-descripcion">
+				<h1>Desde Cero Voces Ciudadanas</h1>
+				<p>
+					"Desde Cero Voces Ciudadanas" es un programa radial tipo
+					magazine de actualidad y cultural. Va dirigido a aquellas
+					voces que muchas veces suelen ser silenciadas en los medios
+					hegemónicos. El objetivo principal de su creación fue el de
+					construir un canal para diversas voces, y un espacio de
+					difusión para las mismas.
 				</p>
+				<p>
+					Por tal motivo, a través de distintos testimonios, historias
+					de vida, noticias, entrevistas, etc. En cada emisión apunto
+					a construir un periodismo visceral que se caracteriza
+					también por ser feminista y con perspectiva de género.
+					<i>"Mi bebe radial"</i> como me gusta llamarlo nació un día
+					de lluvia cerca de la universidad, junto a dos compañeros de
+					la facu bajo el nombre de Desde Cero, y con el tiempo fue
+					creciendo y mutando, desde el año 2018 al presente.
+				</p>
+				<p>
+					Hoy a siete años de llevar a cabo este proyecto
+					comunicacional puedo decir que encontré mi lugar, en el
+					cual, construir otro tipo de periodismo, y me llena de
+					orgullo el recordar la cantidad de contenido creado con
+					todas las voces que fueron pasando, y dejando su huella en
+					este hermoso camino del comunicar.
+				</p>
+			</div>
+
+			<div class="columnas-container">
+				<h2>Nuestras Columnas</h2>
+				<table class="tabla-columnas">
+					<thead>
+						<tr>
+							<th>Nombre de la Columna</th>
+							<th>Información</th>
+							<th>Columnista</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Resistiendo con Salud</td>
+							<td></td>
+							<td>
+								<div class="columnista-info">
+									<img
+										src="imagen/foto_prof._lic._jorge_lujan.jpeg"
+										alt="Foto del Licenciado Jorge Lujan"
+										class="columnista-foto"
+									/>
+									<h3>Prof. Lic. Jorge Lujan</h3>
+									<p>
+										Master en Administación de Servicios de
+										Salud. Profesor de la UNAJ.
+									</p>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>Cultuza</td>
+							<td></td>
+							<td>
+								<div class="columnista-info">
+									<img
+										src="imagen/foto_nicolás_ezequiel_acosta.jpeg"
+										alt="Foto de Nicolás Ezequiel Acosta"
+										class="columnista-foto"
+									/>
+									<h3>Carlos Ruiz</h3>
+									<p>
+										Escritor de cuentos, historietas y
+										microcuentos. Estudio Historia en la
+										UNTREF. Fuí diagnosticado con Asperger a
+										los 23 años.
+									</p>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>Bloco Almada</td>
+							<td>
+								Bloco Almada nuestro espacio etereo donde la voz
+								de los artistas musicales se hace oír y nos
+								invita a conocer sus historias junto al
+								periodista brasileño Rafael Pompeu, mediante
+								entrevistas nacionales e internacionales.
+							</td>
+							<td>
+								<div class="columnista-info"></div>
+							</td>
+						</tr>
+						<tr>
+							<td>Mundo Perro</td>
+							<td></td>
+							<td>
+								<div class="columnista-info">
+									<img
+										src="imagen/foto_fede_garcia.jpg"
+										alt="Foto de Federico Garcia"
+										class="columnista-foto"
+									/>
+									<h3>Federico Garcia</h3>
+									<p>Adiestrador Canino Profesional UBA</p>
+								</div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</main>
 		<footer>
