Nuevo: Página fija, tabla scrolleable. Ajustados diferentes tamaños de la tabla.

--- a/public/desde_cero.html
+++ b/public/desde_cero.html
@@ -107,7 +107,8 @@
 									<h3>Prof. Lic. Jorge Lujan</h3>
 									<p>
 										Master en Administación de Servicios de
-										Salud. Profesor de la UNAJ.
+										Salud.<br />
+										Profesor de la UNAJ.
 									</p>
 								</div>
 							</td>
@@ -125,9 +126,11 @@
 									<h3>Carlos Ruiz</h3>
 									<p>
 										Escritor de cuentos, historietas y
-										microcuentos. Estudio Historia en la
-										UNTREF. Fuí diagnosticado con Asperger a
-										los 23 años.
+										microcuentos.<br />
+										Estudio Historia en la UNTREF.
+										<br />
+										Fuí diagnosticado con Asperger a los 23
+										años.
 									</p>
 								</div>
 							</td>
