Secciones actualizadas: Artistas difundidos y Formularios de prensa

--- a/public/artistas_difundidos.html
+++ b/public/artistas_difundidos.html
@@ -53,61 +53,68 @@
 			</nav>
 		</header>
 		<main>
-			<h1>Artistas Difundidos por Chamufem</h1>
-
-			<div>
-				<p style="text-align: center">
+			<section class="artistas-container">
+				<h1>Artistas Difundidos por Chamufem</h1>
+				<p class="descripcion">
 					Aquí podrás encontrar información sobre los artistas que
 					confían en nosotros para difundir su trayectoria musical y
 					novedades:
 				</p>
-			</div>
-			<div id="lista_artistas">
-				<ul>
-					<li>
+				<div class="artistas-grid">
+					<div class="artista-card">
 						<img
 							src="../public/imagen/foto1_ceci.jpg"
 							alt="Cecilia Noel"
 						/>
-						<br />
 						<a
 							href="artistas_difundidos/cecilia_noel.pdf"
 							target="_blank"
-							>Conoce más sobre Cecilia Noel</a
+							class="artista-link"
 						>
-					</li>
-					<li>
+							Conoce más sobre Cecilia Noel
+						</a>
+					</div>
+					<div class="artista-card">
 						<img
 							src="../public/imagen/foto1_karlin.jpg"
 							alt="Karlin Castillo"
-						/><br /><a
+						/>
+						<a
 							href="artistas_difundidos/karlin_castillo.pdf"
 							target="_blank"
-							>Conoce más sobre Karlin Castillo</a
+							class="artista-link"
 						>
-					</li>
-					<li>
+							Conoce más sobre Karlin Castillo
+						</a>
+					</div>
+					<div class="artista-card">
 						<img
 							src="../public/imagen/foto1_lucas_del_zar.jpg"
 							alt="Lucas Del Zar"
-						/><br /><a
+						/>
+						<a
 							href="artistas_difundidos/lucas_del_zar.pdf"
 							target="_blank"
-							>Conoce más sobre Lucas Del Zar</a
+							class="artista-link"
 						>
-					</li>
-					<li>
+							Conoce más sobre Lucas Del Zar
+						</a>
+					</div>
+					<div class="artista-card">
 						<img
 							src="../public/imagen/foto1_max.jpg"
-							alt=""
-						/><br /><a
+							alt="Max Montanari"
+						/>
+						<a
 							href="artistas_difundidos/max_montanari.pdf"
 							target="_blank"
-							>Conoce más sobre Max Montanari</a
+							class="artista-link"
 						>
-					</li>
-				</ul>
-			</div>
+							Conoce más sobre Max Montanari
+						</a>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer>
 			<div class="copyright">
