Actualizada sección "Sobre mí"

--- a/public/sobre_mi.html
+++ b/public/sobre_mi.html
@@ -61,20 +61,26 @@
 						class="foto-personal"
 					/>
 					<img
-						src="imagen/foto_perfil_2.png"
-						alt="Foto de Yamila Morias"
+						src="imagen/foto_perfil_3.jpeg"
+						alt="Foto de Yamila Morais"
+						class="foto-personal"
+					/>
+					<img
+						src="imagen/foto_perfil_4.jpeg"
+						alt="Foto de Yamila Morais"
 						class="foto-personal"
 					/>
 				</div>
 				<div class="descripcion-perfil">
 					<h1>Yamila Morais</h1>
 					<p>
-						Soy periodista y comunicadora social. Recibida de la
-						carrera X. Mi trabajo se centra en el periodismo
-						visceral, donde busco conectar con la esencia de cada
-						historia y transmitirla de manera auténtica y
+						Soy periodista y Licenciada en Comunicación Social
+						recibida en la Universidad Nacional de la Matanza. Mi
+						trabajo se centra en construir un periodismo feminista y
+						visceral, que me permita conectar con la esencia de cada
+						historia, y transmitirla de manera auténtica y
 						significativa. A través de Chamufem, he creado un
-						espacio donde las voces de la comunidad encuentran un
+						espacio donde las voces de la comunidad encuentren un
 						lugar para resonar y ser escuchadas.
 					</p>
 				</div>
