Actualizadas las columnas de "Desde Cero"

--- a/public/desde_cero.html
+++ b/public/desde_cero.html
@@ -96,7 +96,10 @@
 					<tbody>
 						<tr>
 							<td>Resistiendo con Salud</td>
-							<td></td>
+							<td>
+								Nuestra píldora informacional y de actualidad
+								sanitaria.
+							</td>
 							<td>
 								<div class="columnista-info">
 									<img
@@ -106,8 +109,8 @@
 									/>
 									<h3>Prof. Lic. Jorge Lujan</h3>
 									<p>
-										Master en Administación de Servicios de
-										Salud.<br />
+										Lic. en Enfermería. Especialista en
+										Cuidados Críticos<br />
 										Profesor de la UNAJ.
 									</p>
 								</div>
@@ -115,7 +118,13 @@
 						</tr>
 						<tr>
 							<td>Cultuza</td>
-							<td></td>
+							<td>
+								Un coctel radial de cultura, pop e ituza, único,
+								variado y lleno de curiosidades. En el estaremos
+								al tanto de todo lo que tiene que ver con el
+								mundo de los comics, las historietas, la
+								literatura y la cultura en general.
+							</td>
 							<td>
 								<div class="columnista-info">
 									<img
@@ -145,12 +154,29 @@
 								entrevistas nacionales e internacionales.
 							</td>
 							<td>
-								<div class="columnista-info"></div>
+								<div class="columnista-info">
+									<img
+										src="imagen/foto_rafael_pompeu.jfif"
+										alt="Foto de Rafael Pompeu"
+										class="columnista-foto"
+									/>
+									<h3>Rafael Pompeu</h3>
+									<p>
+										Artista musical, cantautor brasileño y
+										vocalista de la banda de rock
+										"Rockstrada". Periodista, publicitario,
+										digital marketer.
+									</p>
+								</div>
 							</td>
 						</tr>
 						<tr>
 							<td>Mundo Perro</td>
-							<td></td>
+							<td>
+								Nuestra columna destinada al cuidado de nuestras
+								mascotas y la protección y preservación de los
+								animales
+							</td>
 							<td>
 								<div class="columnista-info">
 									<img
@@ -160,6 +186,96 @@
 									/>
 									<h3>Federico Garcia</h3>
 									<p>Adiestrador Canino Profesional UBA</p>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>Zoompolitikon</td>
+							<td>
+								Nuestra columna destinada al cuidado de nuestras
+								mascotas y la protección y preservación de los
+								animales
+							</td>
+							<td>
+								<div class="columnista-info">
+									<img
+										src="imagen/foto_cami.jpg"
+										alt="Foto de Camila Soriano"
+										class="columnista-foto"
+									/>
+									<h3>Camila Soriano</h3>
+									<p>
+										Profesora de Historia. Presidenta del
+										ISFD 45 de Haedo.
+									</p>
+									<img
+										src="imagen/foto_claudio.jpg"
+										alt="Foto de Claudio Etat"
+										class="columnista-foto"
+									/>
+									<h3>Claudio Etat</h3>
+									<p>
+										Músico, bajista, integrante de la banda
+										de rock "Estado Cronopio"
+									</p>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>Brilla de Azul</td>
+							<td>
+								Columna destinada a hablar, concientizar y
+								visibilizar el autismo.
+							</td>
+							<td>
+								<div class="columnista-info">
+									<img />
+									<h3>
+										Asociación Civil Familias Tea Ituzaingó
+									</h3>
+									<p>Organización no gubernamental</p>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>Malvinizar</td>
+							<td>
+								Proyecto histórico y cultural destinado a honrar
+								a nuestros héroes, y de crear conciencia sobre
+								la memoria de Malvinas, y nuestro reclamo de
+								soberanía, a través de entrevistas a ex
+								combatientes y testimonios que quieran contarnos
+								su historia y acompañarnos a malvinizar.
+							</td>
+							<td>
+								<div class="columnista-info">
+									<img
+										src="imagen/foto_malvinizar.png"
+										alt="Foto de Lucas Emiliano del Zar y Luis Alberto Martinez"
+										class="columnista-foto"
+									/>
+									<h3>Lucas Emiliano del Zar</h3>
+									<p>
+										Musico y Cantautor Argentino
+										autodidacta.
+									</p>
+									<h3>Luis Alberto Martinez</h3>
+									<p>Excombatiente de Malvinas Argentinas.</p>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>Conectando con tu esencia</td>
+							<td></td>
+							<td>
+								<div class="columnista-info">
+									<img
+										src="imagen/foto_maria_del_valle.jpg"
+										alt="Foto de Maria del Valle Galván"
+										class="columnista-foto"
+									/>
+									<h3>Maria del Valle Galván</h3>
+									<p>Terapeuta Holística</p>
 								</div>
 							</td>
 						</tr>
