--- a/public/home.html
+++ b/public/home.html
@@ -63,8 +63,8 @@
 				<div class="hero-text">
 					<h1>Bienvenidos a Chamufem</h1>
 					<p>
-						Explorando historias que importan y dando voz a las
-						comunidades.
+						Un espacio de periodismo feminista y visceral,
+						construido a través de las Voces Ciudadanas
 					</p>
 				</div>
 			</section>
