Actualizada sección "Historias que importan" Actualizado footer em todas las páginas con links mailto

--- a/public/historias.html
+++ b/public/historias.html
@@ -53,13 +53,106 @@
 			</nav>
 		</header>
 		<main>
-			<h1>Historias que importan</h1>
-			<div>
-				<p style="text-align: center">
-					Aquí podrás encontrar una selección de historias que
-					reflejan la realidad de muchas personas y que merecen ser
-					contadas.
-				</p>
+			<div class="historia-container">
+				<h1>Historias que importan</h1>
+				<article class="historia-articulo">
+					<h2>Día Mundial de la Donación de Leche Humana</h2>
+					<img
+						src="imagen/Foto leche materna.png"
+						alt="Donación de leche humana"
+					/>
+					<p>
+						Desde el año 2010 a nivel mundial se conmemora el día de
+						la donación de leche humana con el objetivo de difundir
+						y promover los beneficios que produce dicha práctica. La
+						fecha fue establecida en el primer Congreso
+						Iberoamericano de Bancos de Leche Humana, celebrado en
+						Brasilia en septiembre de 2010. El lema conmemorativo de
+						este año es "Donación de Leche Humana: Un gesto
+						humanitario que alimenta esperanza" con el objetivo de
+						poner en valor no solo el impacto nutricional e
+						inmunológico de la leche donada, sino también su
+						profundo significado simbólico, ético y social.
+					</p>
+					<p>
+						En cuanto a los requisitos para ser donante
+						Puericultoras integrantes del colectivo Ley de
+						Puericultoras ya nos manifiestan que se debe ser una
+						"mujer sana que pueda amammantar o extraer leche. Estar
+						amamantando a un bebe menor a un año de edad o tener una
+						producción lactea en exceso. Serologias negativos de no
+						mas de 6 meses de antiguedad. No consumir medicamentes
+						contraindicdod. No consumir alcoho, tabaco, drogas o
+						medicamentos psicotrópicos". También plantean como
+						requisito "no haber recibido transfusiones en los
+						ultimos 12 meses. firmar un consentimiento informado."
+						Disponer de un congelador que alcance los -18° C, si se
+						extrae la leche en el domicilio. Y "respetar las
+						instrucciones para la extraccion, consetvación y
+						transporte de la leche."
+					</p>
+					<p>
+						Asimismo, en nuestro país disponemos de diversos bancos
+						de leche encargados de recibirla, evaluarla y procesarla
+						por ejemplo, en las siguientes provincias, entre otras:
+					</p>
+					<ul>
+						<li>La Plata en el Hospital San Martin</li>
+						<li>Chaco en el Hospital Perrando</li>
+						<li>
+							Ciudad Autonoma de Buenos Aires (CABA) en el
+							Hospital Materno Infantil Ramón Sarda
+						</li>
+						<li>
+							Corrientes en el Hospital Materno Neonatal Eloísa
+							Torrent de Vidal
+						</li>
+						<li>Córdoba en el Hospital Materno Neonatal</li>
+						<li>Mendoza en el Hospipal Lagomaggiore</li>
+						<li>
+							Neuquen en el Hospital Provincial Dr. Ramón Carrizo
+							Lavalle
+						</li>
+					</ul>
+					<p>
+						Con respecto a los beneficios que genera la leche humana
+						pasteurizada podemos mencionar un mejor crecimiento de
+						los bebes nacidos con bajo peso o prematuros, la
+						reduccion del tiempo de internación y la disminución
+						significativa de enfermedades graves como
+						laenterocolitis necrotizante, la sepsis y las
+						infecciones hospitalarias. Es por ello, y por muchos
+						motivos más, que resulta de vital importancia el
+						informar, y generar conciencia sobre el poder
+						transformador que tiene la leche humana donada en un día
+						como hoy.
+					</p>
+				</article>
+				<article class="historia-articulo">
+					<h2>Revolucionando tu salud</h2>
+					<img
+						src="imagen/Foto Cristian Acosta.jpeg"
+						alt="Christian Acosta,Secretario General de SITRE"
+					/>
+					<p>
+						El domingo 18 de mayo en Desde Cero Voces Ciudadanas
+						entrevistamos a Christian Acosta, Lic en Enfermeria, y
+						Secretario General de SITRE (Sindicato de Trabajadores
+						de enfermería de la Republica Argentina). Te compartimos
+						la charla que tuvimos con el sobre la actualidad
+						sanitaria en nuestra columna "Revolucionando tu Salud" a
+						cargo del Licenciado Jorge Luján:
+					</p>
+					<div class="audio-player-container">
+						<audio class="custom-audio-player" controls>
+							<source
+								src="audios/audio_entrevista_christian_acosta.wav"
+								type="audio/mpeg"
+							/>
+							Tu navegador no soporta el elemento de audio.
+						</audio>
+					</div>
+				</article>
 			</div>
 		</main>
 		<footer>
@@ -67,7 +160,13 @@
 				<p>&copy; 2025 Chamufem. Todos los derechos reservados.</p>
 			</div>
 			<div class="developer">
-				<p>Desarrollado por Lucas Godina y Yamila Morais</p>
+				<p>
+					Desarrollado por
+					<a href="mailto:lucasgodina@gmail.com">Lucas Godina</a
+					><br />
+					y
+					<a href="mailto:chamufem@gmail.com">Yamila Morais</a>
+				</p>
 			</div>
 			<div class="redes-sociales">
 				<a
@@ -85,7 +184,7 @@
 					<i class="fab fa-twitter"></i>
 				</a>
 				<a
-					href="https://www.instagram.com"
+					href="https://www.instagram.com/chamufem"
 					target="_blank"
 					aria-label="Instagram"
 				>
