--- a/public/podcast.html
+++ b/public/podcast.html
@@ -104,7 +104,13 @@
 				<p>&copy; 2025 Chamufem. Todos los derechos reservados.</p>
 			</div>
 			<div class="developer">
-				<p>Desarrollado por Lucas Godina y Yamila Morais</p>
+				<p>
+					Desarrollado por
+					<a href="mailto:lucasgodina@gmail.com">Lucas Godina</a
+					><br />
+					y
+					<a href="mailto:chamufem@gmail.com">Yamila Morais</a>
+				</p>
 			</div>
 			<div class="redes-sociales">
 				<a
@@ -122,7 +128,7 @@
 					<i class="fab fa-twitter"></i>
 				</a>
 				<a
-					href="https://www.instagram.com"
+					href="https://www.instagram.com/chamufem"
 					target="_blank"
 					aria-label="Instagram"
 				>
