--- a/public/sobre_mi.html
+++ b/public/sobre_mi.html
@@ -75,13 +75,14 @@
 					<h1>Yamila Morais</h1>
 					<p>
 						Soy periodista y Licenciada en Comunicación Social
-						recibida en la Universidad Nacional de la Matanza. Mi
-						trabajo se centra en construir un periodismo feminista y
-						visceral, que me permita conectar con la esencia de cada
-						historia, y transmitirla de manera auténtica y
-						significativa. A través de Chamufem, he creado un
-						espacio donde las voces de la comunidad encuentren un
-						lugar para resonar y ser escuchadas.
+						recibida en la Universidad Nacional de la Matanza.<br />
+						Mi trabajo se centra en construir un periodismo
+						feminista y visceral, que me permita conectar con la
+						esencia de cada historia, y transmitirla de manera
+						auténtica y significativa.<br />
+						A través de Chamufem, he creado un espacio donde las
+						voces de la comunidad encuentren un lugar para resonar y
+						ser escuchadas.
 					</p>
 				</div>
 			</div>
@@ -91,7 +92,13 @@
 				<p>&copy; 2025 Chamufem. Todos los derechos reservados.</p>
 			</div>
 			<div class="developer">
-				<p>Desarrollado por Lucas Godina y Yamila Morais</p>
+				<p>
+					Desarrollado por
+					<a href="mailto:lucasgodina@gmail.com">Lucas Godina</a
+					><br />
+					y
+					<a href="mailto:chamufem@gmail.com">Yamila Morais</a>
+				</p>
 			</div>
 			<div class="redes-sociales">
 				<a
@@ -109,7 +116,7 @@
 					<i class="fab fa-twitter"></i>
 				</a>
 				<a
-					href="https://www.instagram.com"
+					href="https://www.instagram.com/chamufem"
 					target="_blank"
 					aria-label="Instagram"
 				>
