--- a/public/historias.html
+++ b/public/historias.html
@@ -146,7 +146,7 @@
 					<div class="audio-player-container">
 						<audio class="custom-audio-player" controls>
 							<source
-								src="audios/audio_entrevista_christian_acosta.wav"
+								src="audios/audio_entrevista_christian_acosta.mp3"
 								type="audio/mpeg"
 							/>
 							Tu navegador no soporta el elemento de audio.
